# scamsite

./: .env.example  .gitignore  PRD-ScamAware-Jersey.md  README.md  SPRINT_PLAN.md  Technical-Spec-ScamAware-Chatbot.md  claude.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
docs/: TECHNICAL_DECISIONS.md
docs/adr/: ADR-001-content-management.md  ADR-002-email-service.md  ADR-003-hosting-infrastructure.md  ADR-004-analytics.md
docs/spikes/: 0.1-ollama-qwen-evaluation.md  0.2-jailbreak-resistance.md  0.5-jersey-rss-sources.md
docs/spikes/scripts/: test-ollama-quality.py
frontend/: .dockerignore  .gitignore  .prettierignore  .prettierrc.mjs  Dockerfile  lint-staged.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.husky/: pre-commit
frontend/.storybook/: main.ts  preview.tsx
frontend/public/: og-image-placeholder.txt
frontend/src/app/: HomePageClient.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/scams/: page.tsx
frontend/src/app/scams/[slug]/: loading.tsx  page.tsx
frontend/src/app/warning-signs/: loading.tsx  page.tsx
frontend/src/components/content/: ActionSteps.tsx  AlertPreview.tsx  ComparisonTable.tsx  EmergencyBanner.tsx  HeroSection.tsx  RedFlagChecklist.tsx  ScamLanguageDecoder.tsx  ScamTypeCard.tsx  StepVisualization.tsx  WarningSignCard.tsx  index.ts
frontend/src/components/disclaimers/: AIDisclaimerBanner.tsx  AIDisclaimerModal.tsx  AIDisclaimerProvider.tsx  index.ts
frontend/src/components/docs/: Breakpoints.mdx  Colors.mdx  Introduction.mdx  Spacing.mdx  Typography.mdx
frontend/src/components/layout/: index.ts
frontend/src/components/layout/Footer/: Footer.stories.tsx  Footer.tsx  index.ts
frontend/src/components/layout/Header/: Header.stories.tsx  Header.tsx  index.ts
frontend/src/components/layout/Layout/: Layout.stories.tsx  Layout.tsx  index.ts
frontend/src/components/layout/MobileNav/: MobileNav.stories.tsx  MobileNav.tsx  index.ts
frontend/src/components/providers/: ThemeProvider.tsx  index.ts  useTheme.ts
frontend/src/components/ui/Alert/: Alert.stories.tsx  Alert.tsx  index.ts
frontend/src/components/ui/Badge/: Badge.stories.tsx  Badge.tsx  index.ts
frontend/src/components/ui/Breadcrumb/: Breadcrumb.stories.tsx  Breadcrumb.tsx  index.ts
frontend/src/components/ui/Button/: Button.stories.tsx  Button.test.tsx  Button.tsx  index.ts
frontend/src/components/ui/Card/: Card.stories.tsx  Card.tsx  index.ts
frontend/src/components/ui/Example/: Example.stories.tsx  Example.tsx  index.ts
frontend/src/components/ui/ExpandableCard/: ExpandableCard.stories.tsx  ExpandableCard.tsx  (+1 more)
frontend/src/content/: comparison-examples.ts  scam-language.ts  warning-signs.ts
frontend/src/content/scams/: authorised-push-payment.ts  bank-impersonation.ts  delivery-scams.ts  index.ts  investment-fraud.ts  invoice-fraud.ts  phishing.ts  prize-lottery-scams.ts  romance-scams.ts  tech-support-scams.ts  types.ts
frontend/src/hooks/: index.ts  useFormValidation.test.ts  useFormValidation.ts
frontend/src/lib/: design-tokens.ts  metadata.ts
frontend/src/lib/types/: content.ts
guardrails/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
guardrails/core/: __init__.py  logging.py
guardrails/routes/: __init__.py  health.py
nginx/: nginx.conf
scripts/: build.sh  clean.sh  dev.sh  init-ollama.sh  test.sh
(+21 files in other folders)
